--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@kinde-oss/kinde-auth-nextjs": "^2.3.6",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "convex": "^1.14.1",
     "font-awesome": "^4.7.0",
     "lucide-react": "^0.427.0",
     "next": "14.2.5",
